# aws-sam-with-rust

./: .gitignore  Cargo.toml  Makefile  README.md  template.yaml
src/hello-universe/: main.rs
src/hello-world/: main.rs
