[package]
name = "sam-app-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world"
path = "src/hello-world/main.rs"

[[bin]]
name = "hello-universe"
path = "src/hello-universe/main.rs"

[dependencies]
aws-config = "0.8"
aws-sdk-dynamodb = "0.8"
aws-smithy-client = { version = "0.38", features = ["test-util"] }
lambda_http = "0.5"
serde = "1.0.145"
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
aws-smithy-http = "0.38"
aws-types = { version = "0.8", features = ["hardcoded-credentials"] }
http = "0.2"
